--- a/CV.css
+++ b/CV.css
@@ -58,3 +58,11 @@
         background-color: greenyellow;
     }
 }
+
+input:invalid:required {
+    border: 2px dashed red;
+  }
+  
+  input:valid {
+    border: 2px solid black;
+  }
